--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 # *.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
-.pdf
+physics.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
